--- a/todo
+++ b/todo
@@ -11,4 +11,4 @@
 - find start time of days by data (earliest class)
 - find end time of days similarly
 - NOTE: week 9 in XL is Sem 1 Week 1 and there are 11 weeks, so week 19 is Sem 1 Week 11 (i.e. last week), week 26 in XL is Sem 2 Week 1 and week 37 is Sem 2 Week 11
-- make tool to define course structures (configs) manually, and do this for all courses in the data
+- make tool to define course structures (configs) manually, and do this for all courses in the data -> maybe do a simplified auto-parser to get data for experiments
